verpy/grammar/y.output
Terminals unused in grammar

    domino
    backtick_define
    backtick_include
    backtick_timescale
    backtick_undef
    SignedLeft
    Veryequal
    StarStar


State 2 conflicts: 1 shift/reduce
State 10 conflicts: 2 shift/reduce
State 18 conflicts: 1 shift/reduce
State 53 conflicts: 1 shift/reduce
State 245 conflicts: 1 shift/reduce
State 594 conflicts: 1 shift/reduce
State 717 conflicts: 1 shift/reduce
State 743 conflicts: 1 shift/reduce
State 773 conflicts: 26 reduce/reduce
State 779 conflicts: 26 reduce/reduce
State 802 conflicts: 1 shift/reduce
State 857 conflicts: 26 reduce/reduce
State 911 conflicts: 26 reduce/reduce


Grammar

    0 $accept: Main $end

    1 Main: Mains

    2 Mains: Mains MainItem
    3      | MainItem

    4 MainItem: Module
    5         | Define

    6 Module: module token Hparams Header Module_stuffs endmodule
    7       | module token Hparams Header endmodule
    8       | module token Header Module_stuffs endmodule
    9       | module token Header endmodule

   10 Hparams: '#' '(' head_params ')'
   11        | '#' '(' ')'

   12 Header: ';'
   13       | '(' Header_list ')' ';'
   14       | '(' ')' ';'

   15 Header_list: Header_list ',' Header_item
   16            | Header_item

   17 Header_item: ExtDir token
   18            | ExtDir Width token
   19            | ExtDir integer token
   20            | ExtDir Width token Width
   21            | ExtDir Width Width token
   22            | ExtDir Width Width Width token
   23            | token
   24            | ExtDir token '=' Literal
   25            | ExtDir Width token '=' Literal

   26 Module_stuffs: Mstuff Module_stuffs
   27              | ε

   28 Mstuff: Definition
   29       | Assign
   30       | Instance
   31       | Always
   32       | Generate
   33       | Parameter
   34       | Localparam
   35       | Defparam
   36       | Initial
   37       | Function
   38       | Task
   39       | Define
   40       | Pragma
   41       | newver

   42 Define: define
   43       | define string
   44       | define token
   45       | define token Expr
   46       | define number token '/' number token

   47 Initial: initial Statement

   48 OneDef: token
   49       | token '=' Expr

   50 ManyDefs: ManyDefs ',' OneDef
   51         | OneDef

   52 Definition: ExtDir Tokens_list ';'
   53           | ExtDir Width Tokens_list ';'
   54           | ExtDir Width Tokens_list Width ';'
   55           | event Tokens_list ';'
   56           | IntDir ManyDefs ';'
   57           | IntDir Width ManyDefs ';'
   58           | IntDir Width Width ManyDefs ';'
   59           | IntDir Width Width Width OneDef ';'
   60           | IntDir Width token Width ';'
   61           | IntDir Width token Width Width ';'
   62           | IntDir Width Width token ';'
   63           | IntDir Width Width Width token ';'
   64           | IntDir token Width ';'
   65           | IntDir InstParams Tokens_list ';'
   66           | IntDir InstParams token '=' Expr ';'
   67           | typedef enum logic Width '{' Tokens_list '}' token ';'
   68           | typedef enum logic '{' Tokens_list '}' token ';'
   69           | typedef enum '{' Tokens_list '}' token ';'
   70           | typedef struct packed '{' RegDefines '}' token ';'
   71           | typedef struct '{' RegDefines '}' token ';'

   72 RegDefines: RegDefine RegDefines
   73           | RegDefine

   74 RegDefine: reg token ';'
   75          | logic token ';'
   76          | bit token ';'
   77          | reg Width token ';'
   78          | logic Width token ';'
   79          | bit Width token ';'

   80 Assign: assign Soft_assigns ';'
   81       | assign AssignParams LSH '=' Expr ';'
   82       | assign StrengthDef AssignParams LSH '=' Expr ';'
   83       | assign StrengthDef LSH '=' Expr ';'

   84 StrengthDef: '(' Strength ',' Strength ')'

   85 Strength: strong1
   86         | strong0
   87         | pull1
   88         | pull0
   89         | weak1
   90         | weak0
   91         | highz1
   92         | highz0

   93 WidthInt: Width
   94         | integer

   95 Function: function token ';' Mem_defs Statements endfunction
   96         | function token ';' Statements endfunction
   97         | function Width Width token ';' Mem_defs Statement endfunction
   98         | function WidthInt token ';' Mem_defs Statement endfunction
   99         | function automatic Width token ';' Mem_defs Statement endfunction
  100         | function automatic token ';' Mem_defs Statement endfunction
  101         | function WidthInt token ';' Statement endfunction
  102         | function token '(' Header_list ')' ';' Statement endfunction
  103         | function token '(' Header_list ')' ';' Mem_defs Statement endfunction
  104         | function automatic token '(' Header_list ')' ';' Statements endfunction
  105         | function automatic token '(' Header_list ')' ';' Mem_defs Statements endfunction
  106         | function automatic token token '(' Header_list ')' ';' Statements endfunction
  107         | function automatic token token '(' Header_list ')' ';' Mem_defs Statements endfunction
  108         | function automatic Width token '(' Header_list ')' ';' Statements endfunction
  109         | function automatic Width token '(' Header_list ')' ';' Mem_defs Statements endfunction
  110         | function WidthInt token '(' Header_list ')' ';' Statements endfunction
  111         | function WidthInt token '(' Header_list ')' ';' Mem_defs Statements endfunction

  112 Task: task token ';' Mem_defs Statement endtask
  113     | task token ';' Statement endtask
  114     | task token '(' Header_list ')' ';' Statement endtask
  115     | task token '(' Header_list ')' ';' Mem_defs Statement endtask

  116 Mem_defs: Mem_defs Mem_def
  117         | Mem_def

  118 Mem_def: reg Tokens_list ';'
  119        | real Tokens_list ';'
  120        | wreal Tokens_list ';'
  121        | reg Width Tokens_list ';'
  122        | reg signed Width Tokens_list ';'
  123        | logic Width Tokens_list ';'
  124        | bit Width Tokens_list ';'
  125        | logic Tokens_list ';'
  126        | bit Tokens_list ';'
  127        | reg Width token Width ';'
  128        | reg Width Width token ';'
  129        | output reg Width Width token ';'
  130        | input Tokens_list ';'
  131        | input Tokens_list Width ';'
  132        | input Width Width Tokens_list ';'
  133        | input Width Tokens_list ';'
  134        | input signed Width Tokens_list ';'
  135        | input integer Tokens_list ';'
  136        | integer Tokens_list ';'
  137        | integer Tokens_list Width ';'
  138        | token token ';'

  139 Parameter: parameter Pairs ';'
  140          | parameter signed Pairs ';'
  141          | parameter Width Pairs ';'
  142          | parameter Width Width Pairs ';'
  143          | parameter signed Width Pairs ';'

  144 Localparam: localparam Pairs ';'
  145           | localparam Width Pairs ';'
  146           | localparam Width Width Pairs ';'

  147 Defparam: defparam Pairs ';'

  148 Pairs: Pairs ',' Pair
  149      | Pair

  150 Pair: token '=' Expr

  151 head_params: head_params ',' head_param
  152            | head_param

  153 head_param: localparam token '=' Expr
  154           | parameter token '=' Expr
  155           | parameter Width token '=' Expr
  156           | token '=' Expr

  157 Instance: token token '(' ')' ';'
  158         | token InstParams token '(' ')' ';'
  159         | token token ';'
  160         | or '(' Exprs ')' ';'
  161         | or token '(' Exprs ')' ';'
  162         | token token '(' Conns_list ')' ';'
  163         | or token '(' Conns_list ')' ';'
  164         | token token '(' Exprs ')' ';'
  165         | token '(' Exprs ')' ';'
  166         | token InstParams token '(' Conns_list ')' ';'
  167         | token InstParams token Width '(' Conns_list ')' ';'
  168         | token token Width '(' Conns_list ')' ';'
  169         | token token Width '(' Exprs ')' ';'

  170 Conns_list: Conns_list ',' Connection
  171           | Connection

  172 Connection: '.' '*'
  173           | '.' token '(' Expr ')'
  174           | '.' token '(' ')'
  175           | '.' token '[' number ']' '(' Expr ')'

  176 AssignParams: '#' '(' Exprs ')'
  177             | '#' number
  178             | '#' token
  179             | '#' floating

  180 Prms_list: Prms_list ',' PrmAssign
  181          | PrmAssign

  182 PrmAssign: '.' token '(' Expr ')'
  183          | '.' token

  184 InstParams: '#' '(' Exprs ')'
  185           | '#' number
  186           | '#' floating
  187           | '#' token
  188           | '#' '(' Prms_list ')'
  189           | '#' '(' ')'

  190 Always: always_ff When Statement
  191       | always_comb Statement
  192       | always Statement
  193       | always When Statement

  194 Generate: generate GenStatements endgenerate

  195 GenStatements: GenStatements GenStatement
  196              | GenStatement

  197 GenStatement: begin GenStatements end
  198             | begin ':' token GenStatements end
  199             | genvar Tokens_list ';'
  200             | Definition
  201             | Assign
  202             | Parameter
  203             | Localparam
  204             | Defparam
  205             | Instance
  206             | GenFor_statement
  207             | Always
  208             | Initial
  209             | Pragma
  210             | if '(' Expr ')' GenStatement
  211             | if '(' Expr ')' GenStatement else GenStatement
  212             | case '(' Expr ')' GenCases endcase
  213             | case '(' Expr ')' GenCases GenDefault endcase
  214             | case '(' Expr ')' GenDefault endcase

  215 GenFor_statement: for '(' Soft_assigns ';' Expr ';' Soft_assigns ')' GenStatement

  216 When: '@' '*'
  217     | '@' star
  218     | '@' token
  219     | '@' '(' When_items ')'

  220 Or_coma: or
  221        | ','

  222 When_items: When_items Or_coma When_item
  223           | When_item

  224 When_item: posedge Expr
  225          | negedge Expr
  226          | Expr

  227 Statement: begin Statements end
  228          | begin end
  229          | forever Statement
  230          | begin ':' token Statements end
  231          | fork Statements join
  232          | LSH '=' Expr ';'
  233          | LSH '=' AssignParams Expr ';'
  234          | LSH sm_eq Expr ';'
  235          | LSH sm_eq AssignParams Expr ';'
  236          | if '(' Expr ')' Statement
  237          | if '(' Expr ')' Statement else Statement
  238          | wait Expr ';'
  239          | integer Tokens_list ';'
  240          | int Tokens_list ';'
  241          | reg Tokens_list ';'
  242          | reg Width Tokens_list ';'
  243          | reg signed Width Tokens_list ';'
  244          | release Expr ';'
  245          | force Expr '=' Expr ';'
  246          | When ';'
  247          | emit token ';'
  248          | disable token ';'
  249          | token '(' ')' ';'
  250          | token '(' Exprs ')' ';'
  251          | case '(' Expr ')' Cases endcase
  252          | case '(' Expr ')' Cases Default endcase
  253          | case '(' Expr ')' Default endcase
  254          | casez '(' Expr ')' Cases endcase
  255          | casez '(' Expr ')' Cases Default endcase
  256          | casex '(' Expr ')' Cases endcase
  257          | casex '(' Expr ')' Cases Default endcase
  258          | '#' Expr ';'
  259          | '#' Expr Statement
  260          | token ';'
  261          | For_statement
  262          | Repeat_statement
  263          | While_statement
  264          | Pragma
  265          | assign LSH '=' Expr ';'
  266          | return token ';'
  267          | assert '(' Expr ')' ';'
  268          | assert '(' Expr ')' else Statement

  269 pragma_stuffs: pragma_stuffs ',' pragma_item
  270              | pragma_item

  271 pragma_item: token '=' Expr
  272            | string

  273 Pragma: pragma1 pragma_stuffs pragma2

  274 For_statement: for '(' Soft_assigns ';' Expr ';' Soft_assigns ')' Statement
  275              | for '(' int Soft_assign ';' Expr ';' Soft_assigns ')' Statement

  276 Repeat_statement: repeat '(' Expr ')' Statement

  277 While_statement: while '(' Expr ')' Statement

  278 Soft_assigns: Soft_assigns ',' Soft_assign
  279             | Soft_assign

  280 Soft_assign: LSH '=' Expr
  281            | LSH plus_plus

  282 Cases: Cases Case
  283      | Case

  284 GenCases: GenCases GenCase
  285         | GenCase

  286 Case: Exprs ':' Statement
  287     | Exprs ':' ';'

  288 GenCase: Exprs ':' GenStatement
  289        | Exprs ':' ';'

  290 Default: default ':' Statement
  291        | default ':' ';'

  292 GenDefault: default ':' GenStatement
  293           | default ':' ';'

  294 Exprs: Exprs ',' Expr
  295      | Expr

  296 Statements: Statements Statement
  297           | Statement

  298 LSH: token
  299    | token Width
  300    | token BusBit Width
  301    | token BusBit BusBit
  302    | token BusBit
  303    | CurlyList

  304 Tokens_list: token ',' Tokens_list
  305            | token

  306 Width: '[' Expr ':' Expr ']'
  307      | '[' Expr plus_range Expr ']'
  308      | '[' Expr minus_range Expr ']'

  309 BusBit: '[' Expr ']'

  310 ExtDir: input
  311       | output
  312       | inout
  313       | output reg
  314       | input wire
  315       | output wire
  316       | inout wire
  317       | input signed
  318       | output signed
  319       | output reg signed
  320       | output logic
  321       | input logic
  322       | input bit

  323 IntDir: bit
  324       | logic
  325       | reg
  326       | wire
  327       | signed
  328       | integer
  329       | real
  330       | reg signed
  331       | wire signed
  332       | genvar
  333       | supply0
  334       | supply1
  335       | tri0
  336       | tri1

  337 CurlyList: '{' CurlyItems '}'

  338 CurlyItems: CurlyItems ',' CurlyItem
  339           | CurlyItem

  340 CurlyItem: Expr CurlyList
  341          | Expr
  342          | shift_left CurlyList

  343 Literal: number
  344        | floating
  345        | string
  346        | bin
  347        | hex
  348        | dig
  349        | ubin
  350        | uhex
  351        | udig

  352 Expr: token
  353     | number
  354     | floating
  355     | string
  356     | define
  357     | define '(' Expr ')'
  358     | bin
  359     | hex
  360     | dig
  361     | ubin
  362     | uhex
  363     | udig
  364     | token Width
  365     | token BusBit Width
  366     | token BusBit BusBit
  367     | token BusBit
  368     | Expr '?' Expr ':' Expr
  369     | Expr '+' Expr
  370     | Expr '*' Expr
  371     | Expr '-' Expr
  372     | Expr '/' Expr
  373     | Expr '%' Expr
  374     | Expr '^' Expr
  375     | Expr '|' Expr
  376     | Expr '&' Expr
  377     | Expr '<' Expr
  378     | Expr '>' Expr
  379     | Expr power Expr
  380     | Expr and_and Expr
  381     | Expr or_or Expr
  382     | Expr xnor Expr
  383     | Expr nand Expr
  384     | Expr nor Expr
  385     | Expr eq_eq Expr
  386     | Expr eq3 Expr
  387     | Expr not_eq Expr
  388     | Expr noteqeq Expr
  389     | Expr gr_eq Expr
  390     | Expr sm_eq Expr
  391     | Expr shift_left Expr
  392     | Expr shift_right Expr
  393     | Expr arith_shift_right Expr
  394     | token '(' Exprs ')'
  395     | '(' Expr ')'
  396     | CurlyList
  397     | '-' Expr
  398     | '|' Expr
  399     | '&' Expr
  400     | '^' Expr
  401     | xnor Expr
  402     | nor Expr
  403     | nand Expr
  404     | '!' Expr
  405     | '~' Expr


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 404
    '#' (35) 10 11 176 177 178 179 184 185 186 187 188 189 258 259
    '%' (37) 373
    '&' (38) 376 399
    '(' (40) 10 11 13 14 84 102 103 104 105 106 107 108 109 110 111 114 115 157 158 160 161 162 163 164 165 166 167 168 169 173 174 175 176 182 184 188 189 210 211 212 213 214 215 219 236 237 249 250 251 252 253 254 255 256 257 267 268 274 275 276 277 357 394 395
    ')' (41) 10 11 13 14 84 102 103 104 105 106 107 108 109 110 111 114 115 157 158 160 161 162 163 164 165 166 167 168 169 173 174 175 176 182 184 188 189 210 211 212 213 214 215 219 236 237 249 250 251 252 253 254 255 256 257 267 268 274 275 276 277 357 394 395
    '*' (42) 172 216 370
    '+' (43) 369
    ',' (44) 15 50 84 148 151 170 180 221 269 278 294 304 338
    '-' (45) 371 397
    '.' (46) 172 173 174 175 182 183
    '/' (47) 46 372
    ':' (58) 198 230 286 287 288 289 290 291 292 293 306 368
    ';' (59) 12 13 14 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 74 75 76 77 78 79 80 81 82 83 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 157 158 159 160 161 162 163 164 165 166 167 168 169 199 215 232 233 234 235 238 239 240 241 242 243 244 245 246 247 248 249 250 258 260 265 266 267 274 275 287 289 291 293
    '<' (60) 377
    '=' (61) 24 25 49 66 81 82 83 150 153 154 155 156 232 233 245 265 271 280
    '>' (62) 378
    '?' (63) 368
    '@' (64) 216 217 218 219
    '[' (91) 175 306 307 308 309
    ']' (93) 175 306 307 308 309
    '^' (94) 374 400
    '{' (123) 67 68 69 70 71 337
    '|' (124) 375 398
    '}' (125) 67 68 69 70 71 337
    '~' (126) 405
    error (256)
    module (258) 6 7 8 9
    number (259) 46 175 177 185 343 353
    token (260) 6 7 8 9 17 18 19 20 21 22 23 24 25 44 45 46 48 49 60 61 62 63 64 66 67 68 69 70 71 74 75 76 77 78 79 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 127 128 129 138 150 153 154 155 156 157 158 159 161 162 163 164 165 166 167 168 169 173 174 175 178 182 183 187 198 218 230 247 248 249 250 260 266 271 298 299 300 301 302 304 305 352 364 365 366 367 394
    endmodule (261) 6 7 8 9
    assign (262) 80 81 82 83 265
    input (263) 130 131 132 133 134 135 310 314 317 321 322
    output (264) 129 311 313 315 318 319 320
    inout (265) 312 316
    reg (266) 74 77 118 121 122 127 128 129 241 242 243 313 319 325 330
    wire (267) 314 315 316 326 331
    logic (268) 67 68 75 78 123 125 320 321 324
    tri0 (269) 335
    tri1 (270) 336
    signed (271) 122 134 140 143 243 317 318 319 327 330 331
    event (272) 55
    bin (273) 346 358
    hex (274) 347 359
    dig (275) 348 360
    integer (276) 19 94 135 136 137 239 328
    int (277) 240 275
    real (278) 119 329
    wreal (279) 120
    ubin (280) 349 361
    uhex (281) 350 362
    udig (282) 351 363
    domino (283)
    and_and (284) 380
    or_or (285) 381
    eq3 (286) 386
    eq_eq (287) 385
    not_eq (288) 387
    gr_eq (289) 389
    sm_eq (290) 234 235 390
    always (291) 192 193
    begin (292) 197 198 227 228 230
    end (293) 197 198 227 228 230
    if (294) 210 211 236 237
    else (295) 211 237 268
    posedge (296) 224
    negedge (297) 225
    or (298) 160 161 163 220
    wait (299) 238
    emit (300) 247
    string (301) 43 272 345 355
    defparam (302) 147
    parameter (303) 139 140 141 142 143 154 155
    localparam (304) 144 145 146 153
    case (305) 212 213 214 251 252 253
    casez (306) 254 255
    casex (307) 256 257
    endcase (308) 212 213 214 251 252 253 254 255 256 257
    default (309) 290 291 292 293
    initial (310) 47
    forever (311) 229
    function (312) 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111
    endfunction (313) 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111
    task (314) 112 113 114 115
    endtask (315) 112 113 114 115
    for (316) 215 274 275
    while (317) 277
    backtick_define (318)
    backtick_include (319)
    backtick_timescale (320)
    backtick_undef (321)
    define (322) 42 43 44 45 46 356 357
    strong1 (323) 85
    strong0 (324) 86
    pull1 (325) 87
    pull0 (326) 88
    weak1 (327) 89
    weak0 (328) 90
    highz1 (329) 91
    highz0 (330) 92
    fork (331) 231
    join (332) 231
    disable (333) 248
    pragma1 (334) 273
    pragma2 (335) 273
    plus_range (336) 307
    minus_range (337) 308
    plus_plus (338) 281
    floating (339) 179 186 344 354
    power (340) 379
    star (341) 217
    generate (342) 194
    endgenerate (343) 194
    genvar (344) 199 332
    force (345) 245
    release (346) 244
    xnor (347) 382 401
    nand (348) 383 403
    nor (349) 384 402
    repeat (350) 276
    supply0 (351) 333
    supply1 (352) 334
    newver (353) 41
    return (354) 266
    always_comb (355) 191
    always_ff (356) 190
    enum (357) 67 68 69
    typedef (358) 67 68 69 70 71
    assert (359) 267 268
    struct (360) 70 71
    packed (361) 70
    bit (362) 76 79 124 126 322 323
    automatic (363) 99 100 104 105 106 107 108 109
    shift_left (364) 342 391
    shift_right (365) 392
    SignedLeft (366)
    arith_shift_right (367) 393
    noteqeq (368) 388
    Veryequal (369)
    StarStar (370)
    UNARY_PREC (371)


Nonterminals, with rules where they appear

    $accept (143)
        on left: 0
    Main (144)
        on left: 1
        on right: 0
    Mains (145)
        on left: 2 3
        on right: 1 2
    MainItem (146)
        on left: 4 5
        on right: 2 3
    Module (147)
        on left: 6 7 8 9
        on right: 4
    Hparams (148)
        on left: 10 11
        on right: 6 7
    Header (149)
        on left: 12 13 14
        on right: 6 7 8 9
    Header_list (150)
        on left: 15 16
        on right: 13 15 102 103 104 105 106 107 108 109 110 111 114 115
    Header_item (151)
        on left: 17 18 19 20 21 22 23 24 25
        on right: 15 16
    Module_stuffs (152)
        on left: 26 27
        on right: 6 8 26
    Mstuff (153)
        on left: 28 29 30 31 32 33 34 35 36 37 38 39 40 41
        on right: 26
    Define (154)
        on left: 42 43 44 45 46
        on right: 5 39
    Initial (155)
        on left: 47
        on right: 36 208
    OneDef (156)
        on left: 48 49
        on right: 50 51 59
    ManyDefs (157)
        on left: 50 51
        on right: 50 56 57 58
    Definition (158)
        on left: 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
        on right: 28 200
    RegDefines (159)
        on left: 72 73
        on right: 70 71 72
    RegDefine (160)
        on left: 74 75 76 77 78 79
        on right: 72 73
    Assign (161)
        on left: 80 81 82 83
        on right: 29 201
    StrengthDef (162)
        on left: 84
        on right: 82 83
    Strength (163)
        on left: 85 86 87 88 89 90 91 92
        on right: 84
    WidthInt (164)
        on left: 93 94
        on right: 98 101 110 111
    Function (165)
        on left: 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111
        on right: 37
    Task (166)
        on left: 112 113 114 115
        on right: 38
    Mem_defs (167)
        on left: 116 117
        on right: 95 97 98 99 100 103 105 107 109 111 112 115 116
    Mem_def (168)
        on left: 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138
        on right: 116 117
    Parameter (169)
        on left: 139 140 141 142 143
        on right: 33 202
    Localparam (170)
        on left: 144 145 146
        on right: 34 203
    Defparam (171)
        on left: 147
        on right: 35 204
    Pairs (172)
        on left: 148 149
        on right: 139 140 141 142 143 144 145 146 147 148
    Pair (173)
        on left: 150
        on right: 148 149
    head_params (174)
        on left: 151 152
        on right: 10 151
    head_param (175)
        on left: 153 154 155 156
        on right: 151 152
    Instance (176)
        on left: 157 158 159 160 161 162 163 164 165 166 167 168 169
        on right: 30 205
    Conns_list (177)
        on left: 170 171
        on right: 162 163 166 167 168 170
    Connection (178)
        on left: 172 173 174 175
        on right: 170 171
    AssignParams (179)
        on left: 176 177 178 179
        on right: 81 82 233 235
    Prms_list (180)
        on left: 180 181
        on right: 180 188
    PrmAssign (181)
        on left: 182 183
        on right: 180 181
    InstParams (182)
        on left: 184 185 186 187 188 189
        on right: 65 66 158 166 167
    Always (183)
        on left: 190 191 192 193
        on right: 31 207
    Generate (184)
        on left: 194
        on right: 32
    GenStatements (185)
        on left: 195 196
        on right: 194 195 197 198
    GenStatement (186)
        on left: 197 198 199 200 201 202 203 204 205 206 207 208 209 210 211 212 213 214
        on right: 195 196 210 211 215 288 292
    GenFor_statement (187)
        on left: 215
        on right: 206
    When (188)
        on left: 216 217 218 219
        on right: 190 193 246
    Or_coma (189)
        on left: 220 221
        on right: 222
    When_items (190)
        on left: 222 223
        on right: 219 222
    When_item (191)
        on left: 224 225 226
        on right: 222 223
    Statement (192)
        on left: 227 228 229 230 231 232 233 234 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 250 251 252 253 254 255 256 257 258 259 260 261 262 263 264 265 266 267 268
        on right: 47 97 98 99 100 101 102 103 112 113 114 115 190 191 192 193 229 236 237 259 268 274 275 276 277 286 290 296 297
    pragma_stuffs (193)
        on left: 269 270
        on right: 269 273
    pragma_item (194)
        on left: 271 272
        on right: 269 270
    Pragma (195)
        on left: 273
        on right: 40 209 264
    For_statement (196)
        on left: 274 275
        on right: 261
    Repeat_statement (197)
        on left: 276
        on right: 262
    While_statement (198)
        on left: 277
        on right: 263
    Soft_assigns (199)
        on left: 278 279
        on right: 80 215 274 275 278
    Soft_assign (200)
        on left: 280 281
        on right: 275 278 279
    Cases (201)
        on left: 282 283
        on right: 251 252 254 255 256 257 282
    GenCases (202)
        on left: 284 285
        on right: 212 213 284
    Case (203)
        on left: 286 287
        on right: 282 283
    GenCase (204)
        on left: 288 289
        on right: 284 285
    Default (205)
        on left: 290 291
        on right: 252 253 255 257
    GenDefault (206)
        on left: 292 293
        on right: 213 214
    Exprs (207)
        on left: 294 295
        on right: 160 161 164 165 169 176 184 250 286 287 288 289 294 394
    Statements (208)
        on left: 296 297
        on right: 95 96 104 105 106 107 108 109 110 111 227 230 231 296
    LSH (209)
        on left: 298 299 300 301 302 303
        on right: 81 82 83 232 233 234 235 265 280 281
    Tokens_list (210)
        on left: 304 305
        on right: 52 53 54 55 65 67 68 69 118 119 120 121 122 123 124 125 126 130 131 132 133 134 135 136 137 199 239 240 241 242 243 304
    Width (211)
        on left: 306 307 308
        on right: 18 20 21 22 25 53 54 57 58 59 60 61 62 63 64 67 77 78 79 93 97 99 108 109 121 122 123 124 127 128 129 131 132 133 134 137 141 142 143 145 146 155 167 168 169 242 243 299 300 364 365
    BusBit (212)
        on left: 309
        on right: 300 301 302 365 366 367
    ExtDir (213)
        on left: 310 311 312 313 314 315 316 317 318 319 320 321 322
        on right: 17 18 19 20 21 22 24 25 52 53 54
    IntDir (214)
        on left: 323 324 325 326 327 328 329 330 331 332 333 334 335 336
        on right: 56 57 58 59 60 61 62 63 64 65 66
    CurlyList (215)
        on left: 337
        on right: 303 340 342 396
    CurlyItems (216)
        on left: 338 339
        on right: 337 338
    CurlyItem (217)
        on left: 340 341 342
        on right: 338 339
    Literal (218)
        on left: 343 344 345 346 347 348 349 350 351
        on right: 24 25
    Expr (219)
        on left: 352 353 354 355 356 357 358 359 360 361 362 363 364 365 366 367 368 369 370 371 372 373 374 375 376 377 378 379 380 381 382 383 384 385 386 387 388 389 390 391 392 393 394 395 396 397 398 399 400 401 402 403 404 405
        on right: 45 49 66 81 82 83 150 153 154 155 156 173 175 182 210 211 212 213 214 215 224 225 226 232 233 234 235 236 237 238 244 245 251 252 253 254 255 256 257 258 259 265 267 268 271 274 275 276 277 280 294 295 306 307 308 309 340 341 357 368 369 370 371 372 373 374 375 376 377 378 379 380 381 382 383 384 385 386 387 388 389 390 391 392 393 395 397 398 399 400 401 402 403 404 405


State 0

    0 $accept: • Main $end

    module  shift, and go to state 1
    define  shift, and go to state 2

    Main      go to state 3
    Mains     go to state 4
    MainItem  go to state 5
    Module    go to state 6
    Define    go to state 7


State 1

    6 Module: module • token Hparams Header Module_stuffs endmodule
    7       | module • token Hparams Header endmodule
    8       | module • token Header Module_stuffs endmodule
    9       | module • token Header endmodule

    token  shift, and go to state 8


State 2

   42 Define: define •
   43       | define • string
   44       | define • token
   45       | define • token Expr
   46       | define • number token '/' number token

    number  shift, and go to state 9
    token   shift, and go to state 10
    string  shift, and go to state 11

    token     [reduce using rule 42 (Define)]
    $default  reduce using rule 42 (Define)


State 3

    0 $accept: Main • $end

    $end  shift, and go to state 12


State 4

    1 Main: Mains •
    2 Mains: Mains • MainItem

    module  shift, and go to state 1
    define  shift, and go to state 2

    $default  reduce using rule 1 (Main)

    MainItem  go to state 13
    Module    go to state 6
    Define    go to state 7


State 5

    3 Mains: MainItem •

    $default  reduce using rule 3 (Mains)


State 6

    4 MainItem: Module •

    $default  reduce using rule 4 (MainItem)


State 7

    5 MainItem: Define •

    $default  reduce using rule 5 (MainItem)


State 8

    6 Module: module token • Hparams Header Module_stuffs endmodule
    7       | module token • Hparams Header endmodule
    8       | module token • Header Module_stuffs endmodule
    9       | module token • Header endmodule

    '#'  shift, and go to state 14
    '('  shift, and go to state 15
    ';'  shift, and go to state 16

    Hparams  go to state 17
    Header   go to state 18


State 9

   46 Define: define number • token '/' number token

    token  shift, and go to state 19


State 10

   44 Define: define token •
   45       | define token • Expr

    number    shift, and go to state 20
    token     shift, and go to state 21
    bin       shift, and go to state 22
    hex       shift, and go to state 23
    dig       shift, and go to state 24
    ubin      shift, and go to state 25
    uhex      shift, and go to state 26
    udig      shift, and go to state 27
    string    shift, and go to state 28
    define    shift, and go to state 29
    floating  shift, and go to state 30
    xnor      shift, and go to state 31
    nand      shift, and go to state 32
    nor       shift, and go to state 33
    '|'       shift, and go to state 34
    '^'       shift, and go to state 35
    '&'       shift, and go to state 36
    '-'       shift, and go to state 37
    '('       shift, and go to state 38
    '{'       shift, and go to state 39
    '!'       shift, and go to state 40
    '~'       shift, and go to state 41

    token     [reduce using rule 44 (Define)]
    define    [reduce using rule 44 (Define)]
    $default  reduce using rule 44 (Define)

    CurlyList  go to state 42
    Expr       go to state 43


State 11

   43 Define: define string •

    $default  reduce using rule 43 (Define)


State 12

    0 $accept: Main $end •

    $default  accept


State 13

    2 Mains: Mains MainItem •

    $default  reduce using rule 2 (Mains)


State 14

   10 Hparams: '#' • '(' head_params ')'
   11        | '#' • '(' ')'

    '('  shift, and go to state 44


State 15

   13 Header: '(' • Header_list ')' ';'
   14       | '(' • ')' ';'

    token   shift, and go to state 45
    input   shift, and go to state 46
    output  shift, and go to state 47
    inout   shift, and go to state 48
    ')'     shift, and go to state 49

    Header_list  go to state 50
    Header_item  go to state 51
    ExtDir       go to state 52


State 16

   12 Header: ';' •

    $default  reduce using rule 12 (Header)


State 17

    6 Module: module token Hparams • Header Module_stuffs endmodule
    7       | module token Hparams • Header endmodule

    '('  shift, and go to state 15
    ';'  shift, and go to state 16

    Header  go to state 53


State 18

    8 Module: module token Header • Module_stuffs endmodule
    9       | module token Header • endmodule

    token        shift, and go to state 54
    endmodule    shift, and go to state 55
    assign       shift, and go to state 56
    input        shift, and go to state 46
    output       shift, and go to state 47
    inout        shift, and go to state 48
    reg          shift, and go to state 57
    wire         shift, and go to state 58
    logic        shift, and go to state 59
    tri0         shift, and go to state 60
    tri1         shift, and go to state 61
    signed       shift, and go to state 62
    event        shift, and go to state 63
    integer      shift, and go to state 64
    real         shift, and go to state 65
    always       shift, and go to state 66
    or           shift, and go to state 67
    defparam     shift, and go to state 68
    parameter    shift, and go to state 69
    localparam   shift, and go to state 70
    initial      shift, and go to state 71
    function     shift, and go to state 72
    task         shift, and go to state 73
    define       shift, and go to state 2
    pragma1      shift, and go to state 74
    generate     shift, and go to state 75
    genvar       shift, and go to state 76
    supply0      shift, and go to state 77
    supply1      shift, and go to state 78
    newver       shift, and go to state 79
    always_comb  shift, and go to state 80
    always_ff    shift, and go to state 81
    typedef      shift, and go to state 82
    bit          shift, and go to state 83

    endmodule  [reduce using rule 27 (Module_stuffs)]
